# Search-tool

./: .gitignore  README.md  cli.go  dirsize.go  go.mod  main.go  package-lock.json  package.json  start.bat  start.sh
backup-tauri/: Cargo.toml
backup-tauri/src/: cli.rs  main.rs  scan.rs
backup-tauri/templates/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/app/: index.html  package-lock.json  package.json
src-tauri/app/src/: main.js  style.css
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  scan.rs
src-tauri/templates/: index.html
templates/: index.html
