[package]
name = "search-tool"
version = "0.1.0"
edition = "2021"

[lib]
name = "search_tool"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tower = "0.4"

[[bin]]
name = "search-tool"
path = "src/main.rs"

[[bin]]
name = "search-tool-cli"
path = "src/cli.rs"
